hphp/hack/test/typecheck/needs_concrete/needs_concrete_non_meth_1.php.exp
ERROR: File "needs_concrete_non_meth_1.php", line 11, characters 13-15:
Cannot access abstract member `A::abs`; it may be abstract and `static` might refer to an abstract class here. Consider adding the `__NeedsConcrete` attribute to the containing method. (Typing[4491])
  File "needs_concrete_non_meth_1.php", line 7, characters 35-37:
  Declaration is here
ERROR: File "needs_concrete_non_meth_1.php", line 12, characters 9-14:
Cannot instantiate via `static`: `static` might refer to a non-concrete class here.`A` (Typing[4492])
  File "needs_concrete_non_meth_1.php", line 5, characters 16-16:
  Declaration is here
